Cycle detection algorithm corrected Existed category detection algorithm corrected